tests/ui/env-empty.stderr
error: expected string literal as argument to env! macro
 --> $DIR/tests/ui/env-empty.rs:4:10
  |
4 |     fn [<env!()>]() {}
  |          ^^^^^^
